# risc0-verifier-wasm

./: .gitignore  Cargo.toml  README.md  index.html
pkg/: .gitignore  package.json  risc0_verifier_wasm.d.ts  risc0_verifier_wasm.js  risc0_verifier_wasm_bg.wasm  risc0_verifier_wasm_bg.wasm.d.ts
src/: lib.rs
static/: index.html
