[package]
name = "risc0-verifier-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std"] } # Assuming 2.0.2 is the version you use, adjust if necessary. "std" feature might be needed for some functionalities.
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
console_error_panic_hook = "0.1.7" # For better panic messages in the browser console

[lib]
crate-type = ["cdylib"]
